Bug 391788 - Transparent scrollbar visual glitch
Summary: Transparent scrollbar visual glitch
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-13 01:05 UTC by Alex Nemeth
Modified: 2018-04-01 16:22 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.04
Sentry Crash Report:


Attachments
Video of the bug (1.36 MB, video/webm)
2018-03-13 01:05 UTC, Alex Nemeth
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Nemeth 2018-03-13 01:05:08 UTC
Created attachment 111354 [details]
Video of the bug

With the new patch that makes the scrollbar transparent (https://phabricator.kde.org/D11184) there is a bug when setting transparency in the Konsole profile.

When the Konsole window is selected or deselected the scrollbar gets a slightly darker background until I hover the mouse over it.
See video of it in action.

Konsole was built from github.
Comment 1 Ahmad Samir 2018-03-13 10:09:39 UTC
I hope I CC'ed the right email address.
Comment 2 Kurt Hindenburg 2018-03-15 14:37:13 UTC
yea on certain schemes it looks rather odd
Comment 3 Alex Nemeth 2018-03-31 17:10:48 UTC
Attempt to fix this here: https://phabricator.kde.org/D11839
Comment 4 Kurt Hindenburg 2018-04-01 15:47:16 UTC
Git commit 88b9cf197f8d2edb3e83c155d25fa562b3fda061 by Kurt Hindenburg, on behalf of Alex Nemeth.
Committed on 01/04/2018 at 15:47.
Pushed by hindenburg into branch 'master'.

Fixed scrollbar background bug for transparent Konsole

Summary:
In D11184 a visual glitch was introduced when using transparent
background in Konsole.
FIXED-IN: 18.04

Test Plan:
**Before:**

Opaque, there was no problem here
{F5779911}

Transparent, obvious problem
{F5779912}

**After:**

Opaque, nothing changes here
{F5779913}

Transparent, problem fixed
{F5779914}

Reviewers: hindenburg, #konsole

Reviewed By: hindenburg, #konsole

Subscribers: #konsole

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D11839

M  +4    -12   src/TerminalDisplay.cpp

https://commits.kde.org/konsole/88b9cf197f8d2edb3e83c155d25fa562b3fda061
Comment 5 Kurt Hindenburg 2018-04-01 16:22:49 UTC
Git commit 419a3fa0dea9cfeeeb1ceb745dfd4c98db68159c by Kurt Hindenburg, on behalf of Alex Nemeth.
Committed on 01/04/2018 at 16:22.
Pushed by hindenburg into branch 'Applications/18.04'.

Fixed scrollbar background bug for transparent Konsole

Summary:
In D11184 a visual glitch was introduced when using transparent
background in Konsole.
FIXED-IN: 18.04

Test Plan:
**Before:**

Opaque, there was no problem here
{F5779911}

Transparent, obvious problem
{F5779912}

**After:**

Opaque, nothing changes here
{F5779913}

Transparent, problem fixed
{F5779914}

Reviewers: hindenburg, #konsole

Reviewed By: hindenburg, #konsole

Subscribers: #konsole

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D11839

(cherry picked from commit 88b9cf197f8d2edb3e83c155d25fa562b3fda061)

M  +4    -12   src/TerminalDisplay.cpp

https://commits.kde.org/konsole/419a3fa0dea9cfeeeb1ceb745dfd4c98db68159c