Fixed scrollbar background bug for transparent Konsole

Summary:
In D11184 a visual glitch was introduced when using transparent
background in Konsole.

BUG: 391788
FIXED-IN: 18.04

Test Plan:
**Before:**

Opaque, there was no problem here
{F5779911}

Transparent, obvious problem
{F5779912}

**After:**

Opaque, nothing changes here
{F5779913}

Transparent, problem fixed
{F5779914}

Reviewers: hindenburg, #konsole

Reviewed By: hindenburg, #konsole

Subscribers: #konsole

Tags: #konsole

Differential Revision: https://phabricator.kde.org/D11839